# mycobot_600_moveit-v2

docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
mycobot_600_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_600_moveit_config/config/: firefighter.ros2_control.xacro  firefighter.srdf  firefighter.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_pro_with_gripper.ros2_control.xacro  mycobot_pro_with_gripper.srdf  mycobot_pro_with_gripper.urdf.xacro  ros2_controllers.yaml
mycobot_600_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_control/: CMakeLists.txt  mycobot_ros2_control.xml  package.xml
mycobot_control/include/mycobot_control/: mycobot_hardware.hpp
mycobot_control/src/: _mycobot_hardware.cpp  mycobot_hardware.cpp
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: view_mycobot.launch.py
mycobot_description/rviz/: view_mycobot.rviz
mycobot_description/urdf/: hma_cobot_with_eef.urdf  hma_cobot_with_eef.xacro
mycobot_description/urdf/camera_attachments/: camera_attachment.urdf  camera_mount1.dae  camera_mount2.dae  カメラマウントアセンブリ.f3z
mycobot_description/urdf/mycobot_pro_600/: mycobot_pro_600.urdf
mycobot_description/urdf/pro_adaptive_gripper/: mycobot_pro_adaptive_gripper.urdf
mycobot_test/: CMakeLists.txt  README.md  package.xml
mycobot_test/src/: .clangd  move_angle.cpp  move_eef.cpp  run.cpp
