<?xml version="1.0"?>
<package format="3">
  <name>mycobot_description</name>
  <version>2.1.8</version>
  <description>
    URDF description for mycobot pro 600
  </description>

  <author>Ryohei Kobayashi</author>
  <maintainer email="kobayashi.ryohei621@mail.kyutech.jp">ry0hei-kobayashi</maintainer>

  <license file="LICENSE">BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
